crates/gob-symbols/tests/it/snapshots/it__corpus__rust_anon.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @rust (attr "doc" (lit "str" "Anonymous units: closures and nested fn items.")) (unit "function" "impl" name="make" \1 (group "sequence" (rust.visibility_modifier (lit "pub" "pub")) (lit "fn" "fn") (rust.parameter (lit "pattern" "_") (lit "primitive_type" "i32")) (lit "->" "->") (rust.abstract_type (lit "impl" "impl") (rust.function_type (lit "type_identifier" "Fn") (rust.parameters (lit "(" "(") (lit "primitive_type" "i32") (lit ")" ")")) (lit "->" "->") (lit "primitive_type" "i32")))) (group "sequence" (bind "item" "" \1 (group "sequence" (anon "closure" \1 (lit "move" "move") (lit "pattern" "_") (rust.binary_expression (apply "call" (ref #1) (ref #2)) (lit "+" "+") (ref #0)))) (anon "fn" (lit "fn" "fn") (rust.parameters (lit "(" "(") (rust.parameter (lit "identifier" "v") (lit ":" ":") (lit "primitive_type" "i32")) (lit ")" ")")) (lit "->" "->") (lit "primitive_type" "i32") (group "sequence" (rust.binary_expression (ref "v") (lit "*" "*") (lit "integer_literal" "2"))))))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
S3 lexical>S2:Must
S4 lexical>S3:Must
S5 lexical>S2:Must
D0 S1 Unit "make" Must
D1 S2 Binder "_" Must
D2 S3 Binder "_" Must
D3 S4 Binder "_" Must
R0 S4 must D2
R1 S4 must D3
R2 S4 must D1
R3 S5 unknown "v"

== file ==
fidelity F3 status Complete
== symbols ==
tests/corpus/rust/ops/anon.rs::make Function Public parent=
== edges ==
