crates/gob-symbols/tests/it/snapshots/it__corpus__rust_lit.snap
---
source: crates/gob-symbols/tests/corpus.rs
expression: out
---
== term ==
(unit "file" "impl" @rust (attr "doc" (lit "str" "Literals are exact: a token change changes the digest.")) (unit "function" "impl" name="values" (group "sequence" (rust.visibility_modifier (lit "pub" "pub")) (lit "fn" "fn") (lit "->" "->") (rust.tuple_type (lit "(" "(") (lit "primitive_type" "i32") (lit "," ",") (rust.reference_type (lit "&" "&") (rust.lifetime (lit "'" "'") (lit "identifier" "static")) (lit "primitive_type" "str")) (lit "," ",") (lit "primitive_type" "bool") (lit "," ",") (lit "primitive_type" "f64") (lit ")" ")"))) (group "sequence" (rust.tuple_expression (lit "(" "(") (lit "integer_literal" "42") (lit "," ",") (rust.string_literal (lit "\"" "\"") (lit "string_content" "text") (lit "escape_sequence" "\\n") (lit "\"" "\"")) (lit "," ",") (rust.boolean_literal (lit "true" "true")) (lit "," ",") (lit "float_literal" "1.5") (lit ")" ")")))))
== scope graph ==
S0
S1 lexical>S0:Must
S2 lexical>S1:Must
D0 S1 Unit "values" Must

== file ==
fidelity F3 status Complete
== symbols ==
tests/corpus/rust/ops/lit.rs::values Function Public parent=
== edges ==
